/*
 * Copyright 2019 Red Hat, Inc. and/or its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { shallow } from 'enzyme';
import toJson from 'enzyme-to-json';
import * as React from 'react';
import Header from './Header';

describe('Header component', () => {
  it('should render correctly on a desktop', () => {
    const mediaQuery = jest.requireMock('react-responsive');
    mediaQuery.useMediaQuery.mockReturnValueOnce(true);

    const header = shallow(<Header {...props} />);

    expect(mediaQuery.useMediaQuery).toBeCalledWith({ minWidth: 1400 });
    expect(toJson(header)).toMatchSnapshot();
  });

  it('should render correctly on a mobile', () => {
    const mediaQuery = jest.requireMock('react-responsive');
    mediaQuery.useMediaQuery.mockReturnValueOnce(false);

    const header = shallow(<Header {...props} />);

    expect(mediaQuery.useMediaQuery).toBeCalledWith({ minWidth: 1400 });
    expect(toJson(header)).toMatchSnapshot();
  });
});

const props = {
  onNavToggle: jest.fn(),
};
